--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     ]
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "antd": "^4.23.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "6"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
@@ -27,15 +30,22 @@
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
     "@vitejs/plugin-react": "^2.1.0",
+    "consola": "^2.15.3",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.7",
     "husky": "^8.0.1",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
+    "qs": "^6.11.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
-    "vite-plugin-eslint": "^1.8.1"
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-style-import": "^2.0.0"
   }
 }
