--- a/package.json
+++ b/package.json
@@ -18,18 +18,23 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.23.0",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "6"
+    "react-router-dom": "6",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@types/prismjs": "^1.26.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-syntax-highlighter": "^15.5.5",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
     "@vitejs/plugin-react": "^2.1.0",
+    "babel-plugin-prismjs": "^2.1.0",
     "consola": "^2.15.3",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
@@ -44,6 +49,7 @@
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
     "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-prismjs": "^0.0.8",
     "vite-plugin-style-import": "^2.0.0"
   }
 }
