--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@bytemd/plugin-gfm": "^1.17.4",
+    "@bytemd/plugin-highlight-ssr": "^1.17.2",
+    "@bytemd/react": "^1.17.2",
     "antd": "^4.23.0",
+    "juejin-markdown-themes": "^1.29.5",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
