--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "@bytemd/plugin-highlight-ssr": "^1.17.2",
     "@bytemd/react": "^1.17.2",
     "@handsontable/react": "^8.4.0",
-    "antd": "^4.23.0",
+    "antd": "^5.9.2",
     "handsontable": "6.2.2",
     "juejin-markdown-themes": "^1.29.5",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "6",
+    "react-router-dom": "^6.16.0",
     "react-syntax-highlighter": "^15.5.0",
     "three": "^0.150.1"
   },
@@ -51,14 +51,13 @@
     "eslint-plugin-react": "^7.31.7",
     "husky": "^8.0.1",
     "less": "^4.1.3",
-    "less-loader": "^11.0.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "qs": "^6.11.0",
+    "sass": "^1.68.0",
     "typescript": "^4.6.4",
-    "vite": "^3.1.0",
+    "vite": "^4.4.9",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-prismjs": "^0.0.8",
-    "vite-plugin-style-import": "^2.0.0"
+    "vite-plugin-prismjs": "^0.0.8"
   }
 }
