--- a/package.json
+++ b/package.json
@@ -16,45 +16,45 @@
     ]
   },
   "dependencies": {
-    "@ant-design/icons": "^4.7.0",
-    "@babel/polyfill": "^7.12.1",
-    "@bytemd/plugin-gfm": "^1.17.4",
-    "@bytemd/plugin-highlight-ssr": "^1.17.2",
-    "@bytemd/react": "^1.17.2",
+    "@ant-design/icons": "4.7.0",
+    "@babel/polyfill": "7.12.1",
+    "@bytemd/plugin-gfm": "1.17.4",
+    "@bytemd/plugin-highlight-ssr": "1.17.2",
+    "@bytemd/react": "1.17.2",
     "antd": "^5.9.2",
-    "juejin-markdown-themes": "^1.29.5",
-    "prismjs": "^1.29.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
-    "react-syntax-highlighter": "^15.5.0",
-    "three": "^0.150.1"
+    "juejin-markdown-themes": "1.29.5",
+    "prismjs": "1.29.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.16.0",
+    "react-syntax-highlighter": "15.5.0",
+    "three": "0.150.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.1.2",
-    "@commitlint/config-conventional": "^17.1.0",
-    "@types/prismjs": "^1.26.0",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@types/react-syntax-highlighter": "^15.5.5",
-    "@types/three": "^0.149.0",
-    "@typescript-eslint/eslint-plugin": "^5.36.2",
-    "@typescript-eslint/parser": "^5.36.2",
-    "@vitejs/plugin-react": "^2.1.0",
-    "babel-plugin-prismjs": "^2.1.0",
+    "@commitlint/cli": "17.1.2",
+    "@commitlint/config-conventional": "17.1.0",
+    "@types/prismjs": "1.26.0",
+    "@types/react": "18.0.17",
+    "@types/react-dom": "18.0.6",
+    "@types/react-syntax-highlighter": "15.5.5",
+    "@types/three": "0.149.0",
+    "@typescript-eslint/eslint-plugin": "5.36.2",
+    "@typescript-eslint/parser": "5.36.2",
+    "@vitejs/plugin-react": "2.1.0",
+    "babel-plugin-prismjs": "2.1.0",
     "consola": "^2.15.3",
-    "eslint": "^8.23.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.7",
-    "husky": "^8.0.1",
-    "less": "^4.1.3",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
-    "qs": "^6.11.0",
-    "sass": "^1.68.0",
-    "typescript": "^4.6.4",
-    "vite": "^4.4.9",
+    "eslint": "8.23.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "7.31.7",
+    "husky": "8.0.1",
+    "less": "4.1.3",
+    "lint-staged": "13.0.3",
+    "prettier": "2.7.1",
+    "qs": "6.11.0",
+    "sass": "1.68.0",
+    "typescript": "4.6.4",
+    "vite": "4.4.9",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-prismjs": "^0.0.8"
   }
