--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "husky": "8.0.1",
     "less": "4.1.3",
     "lint-staged": "13.0.3",
+    "postcss": "^8.4.30",
+    "postcss-preset-env": "^9.1.4",
     "prettier": "2.7.1",
     "qs": "6.11.0",
     "sass": "1.68.0",
