--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@bytemd/plugin-gfm": "1.17.4",
     "@bytemd/plugin-highlight-ssr": "1.17.2",
     "@bytemd/react": "1.17.2",
-    "antd": "^5.9.2",
+    "antd": "^5.2.0",
     "juejin-markdown-themes": "1.29.5",
     "prismjs": "1.29.0",
     "react": "18.2.0",
@@ -38,8 +38,8 @@
     "@types/react-dom": "18.0.6",
     "@types/react-syntax-highlighter": "15.5.5",
     "@types/three": "0.149.0",
-    "@typescript-eslint/eslint-plugin": "5.36.2",
-    "@typescript-eslint/parser": "5.36.2",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
     "@vitejs/plugin-react": "2.1.0",
     "babel-plugin-prismjs": "2.1.0",
     "consola": "^2.15.3",
@@ -55,7 +55,7 @@
     "prettier": "2.7.1",
     "qs": "6.11.0",
     "sass": "1.68.0",
-    "typescript": "4.6.4",
+    "typescript": "~5.2.2",
     "vite": "4.4.9",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-prismjs": "^0.0.8"
