feat: react-activation

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "juejin-markdown-themes": "1.29.5",
     "prismjs": "1.29.0",
     "react": "18.2.0",
+    "react-activation": "^0.12.4",
     "react-dom": "18.2.0",
     "react-router-dom": "6.16.0",
     "react-syntax-highlighter": "15.5.0",
