--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
       "npm run lint"
     ]
   },
+  "import": {}, 
   "dependencies": {
     "@ant-design/icons": "4.7.0",
     "@babel/polyfill": "7.12.1",
@@ -29,7 +30,8 @@
     "react-dom": "18.2.0",
     "react-router-dom": "6.16.0",
     "react-syntax-highlighter": "15.5.0",
-    "three": "0.150.1"
+    "three": "0.150.1",
+    "xlsx": "file:./shared/xlsx"
   },
   "devDependencies": {
     "@commitlint/cli": "17.1.2",
