--- a/package.json
+++ b/package.json
@@ -6,14 +6,12 @@
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx --fix --quiet ./",
+    "lint": "lint-staged",
     "preview": "vite preview",
     "prepare": "husky install"
   },
   "lint-staged": {
-    "*.{js,jsx,tsx,ts}": [
-      "npm run lint"
-    ]
+    "*.{jsx,tsx,ts}": "eslint --fix"
   },
   "import": {}, 
   "dependencies": {
